--- a/src/components/CategoryPricesDetails/CategoryPricesDetails.css
+++ b/src/components/CategoryPricesDetails/CategoryPricesDetails.css
@@ -20,14 +20,10 @@
     display: grid;
     grid-template-columns: 4fr 1fr 1fr;
     padding: 0rem 0.4rem;
-    /* margin-bottom: 0.4rem; */
     border-radius: 0.2rem;
-    /* box-shadow: 0px 0px 4px 0px var(--white-grey); */
-    /* box-shadow: 0px 0px 5px 2px var(--limon); */
-
 }
 
-.hr {
+.categoryPricesDetails_hr {
     border: 1px solid var(--white-grey);
     box-shadow: 0px 0px 5px 0px var(--white-grey);
 }
@@ -40,7 +36,7 @@
     display: flex;
     justify-content: flex-end;
     min-width: 6.5rem;
-    padding: 0 0.4rem;
+    padding: 0 0.2rem;
 }
 
 .categoryPricesDetails__price_curr {
