--- a/src/components/Comparison/Comparison.css
+++ b/src/components/Comparison/Comparison.css
@@ -76,11 +76,11 @@ textarea {
 
 .comparison__elem_name {
     margin-right: 1rem;
-
 }
 
 .comparison__city_price_cntr {
     display: flex;
+    flex-direction: row;
     justify-content: flex-end;
     min-width: 6.5rem;
     padding: 0 0.4rem;
@@ -90,6 +90,9 @@ textarea {
     padding-left: 0.2rem;
 }
 
+.comparison__cityTwo_percent {
+    white-space: nowrap;
+}
 
 @media screen and (max-width: 1000px) {
     .comparison__elem_cntr {
@@ -101,6 +104,11 @@ textarea {
     .comparison__elem_cntr {
         grid-template-columns: 1fr 4fr 2fr 2fr 1fr;
     }
+
+    .comparison__quantity_minus,
+    .comparison__quantity_plus {
+        padding: 0 0.2rem;
+    }
 }
 
 @media screen and (max-width: 600px) {
@@ -109,7 +117,33 @@ textarea {
     }
 
     .comparison__elem_cntr {
-        grid-template-columns: 1fr 2fr 2fr 2fr 1fr;
+        grid-template-columns: 1fr 3fr 2fr 2fr 1fr;
         padding-bottom: 0.2rem;
+    }
+
+    .comparison__elem_name {
+        margin-right: 0.2rem;
+    }
+
+    .comparison__city_price_cntr {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        min-width: 3rem;
+        padding: 0 0.2rem;
+    }
+
+    .comparison__cityTwo_percent {
+        white-space: normal;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 415px) {
+    .comparison {
+        min-width: 310px;
+        font-size: 0.8rem;
+        margin: 1rem 0;
     }
 }
