--- a/src/components/Navbar/NavbarLogo/NavbarLogo.css
+++ b/src/components/Navbar/NavbarLogo/NavbarLogo.css
@@ -25,3 +25,16 @@
     top: 1.6rem;
     left: 0.2rem
 }
+
+@media screen and (max-width: 400px) {
+    .navbarLogo__img {
+        width: 2.2rem;
+        height: 2.2rem;
+        left: 1.1rem
+    }
+
+    .navbarLogo__name {
+        font-size: 0.9rem;
+        left: 0rem
+    }
+}
