--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
   @import url('https://fonts.googleapis.com/css2?family=Ysabeau+Infant:ital,wght@0,200;0,400;0,500;0,600;0,700;0,800;1,800&family=Ysabeau+SC:wght@600;800&display=swap');
 
   .App {
-      font-family: 'Ysabeau Infant';
+    font-family: 'Ysabeau Infant';
+  }
+
+  @media screen and (max-width: 600px) {
+    .App {
+      font-size: 0.9rem;
+    }
   }
