--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,6 +4,7 @@
     align-items: center;
     background-color: var(--limon, #a5e65a);
     padding: 0 1rem 0 1rem;
+    min-height: 72px;
 }
 
 .navbar__main {
